force-app/main/default/objects/Objective__c/fields/Related_Needs__c.field-meta.xml
<CustomField>
    <fullName>Related_Needs__c</fullName>
    <label>Related Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attachment Difficulties</fullName>
            </value>
            <value>
                <fullName>Community Life</fullName>
            </value>
            <value>
                <fullName>Cultural Identity</fullName>
            </value>
            <value>
                <fullName>Developmental</fullName>
            </value>
            <value>
                <fullName>Family Stress</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Marital / Partner Conflict</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Natural Supports (i.e., unpaid)</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Physical Health</fullName>
            </value>
            <value>
                <fullName>Relationship Performance</fullName>
            </value>
            <value>
                <fullName>Resourcefulness</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Spiritual/Religious</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Supermion</fullName>
            </value>
            <value>
                <fullName>Vocational Preferences &amp; Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>