force-app/main/default/objects/Objective__c/fields/Related_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Related_Strengths__c</fullName>
    <label>Related Strengths</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>